--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,15 @@
 <resources>
-    <string name="app_name">TripBuddy</string>
+    <string name="app_name">TripBuddy_V0</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="title_activity_activity_dos">ActivityDos</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_activity_details">ActivityDetails</string>
+    <string name="title_activity_test_acitivity">TestAcitivity</string>
+    <string name="title_activity_test">TestActivity</string>
 </resources>
