Onglet recherche en développement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_test_acitivity">TestAcitivity</string>
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_itineraire">ItineraireActivity</string>
+    <string name="title_activity_research">Research</string>
 </resources>
